@@ -8,13 +8,10 @@ import com.server.bbo_gak.domain.card.dto.response.TagGetResponse;
 import com.server.bbo_gak.domain.card.entity.Card;
 import com.server.bbo_gak.domain.card.entity.CardTagSearchHistory;
 import com.server.bbo_gak.domain.card.entity.CardTypeValue;
-import com.server.bbo_gak.domain.card.entity.CardTypeValueGroup;
 import com.server.bbo_gak.domain.card.entity.Tag;
 import com.server.bbo_gak.domain.user.entity.User;
 import java.util.Comparator;
 import java.util.List;
-import java.util.Optional;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -28,14 +25,12 @@ public class CardSearchService {
     private final CardDao cardDao;
 
     @Transactional
-    public List<CardSearchByTagListResponse> searchCardByTagList(User user, String cardTypeValueGroup,
-        List<Long> tagIdList) {
+    public List<CardSearchByTagListResponse> searchCardByTagList(User user, List<Long> tagIdList) {
 
         List<Tag> tagList = tagRepository.findAllById(tagIdList);
+        List<Card> cards = cardDao.findAllByUserIdAndCardTypeValueList(user, new CardTypeValue[0], null);
 
-        List<Card> cards = cardDao.findAllByUserIdAndCardTypeValueList(user, getCardTypeValueList(cardTypeValueGroup),
-            null);
-
+        cardTagSearchHistoryRepository.deleteAllByUserAndTagIn(user, tagList);
         cardTagSearchHistoryRepository.saveAll(tagList.stream()
             .map(tag -> new CardTagSearchHistory(user, tag))
             .toList());
@@ -45,7 +40,7 @@ public class CardSearchService {
             .filter(card -> tagList.isEmpty() || card.isTagListContain(tagList))
             .sorted(Comparator.comparing(Card::getUpdatedDate).reversed())
             .map(CardSearchByTagListResponse::from)
-            .collect(Collectors.toList());
+            .toList();
     }
 
     @Transactional(readOnly = true)
@@ -53,12 +48,6 @@ public class CardSearchService {
         return cardTagSearchHistoryRepository.findTop10ByUserOrderByCreatedDate(user).stream()
             .map(cardTagSearchHistory -> TagGetResponse.from(cardTagSearchHistory.getTag()))
             .toList();
-    }
-
-    private CardTypeValue[] getCardTypeValueList(String cardTypeValueGroupInput) {
-        return Optional.ofNullable(cardTypeValueGroupInput)
-            .map(cardTypeValueGroup -> CardTypeValueGroup.findByValue(cardTypeValueGroup).getCardTypeValueList())
-            .orElseGet(() -> new CardTypeValue[0]);
     }
 
 }
